# jack-test

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  MidiHandler.cpp
